add test for async & fix Enumerator