@@ -70,6 +70,7 @@ subprojects {
 
     test {
         useJUnitPlatform()
+        jvmArgs('--add-opens', 'java.base/java.lang=ALL-UNNAMED')
     }
 }
 
